--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
         <span>제휴문의</span>
         <span>서비스 소개</span>
     </div>
-    <div style = "margin: 1.5rem 0; font-family: 'Festive', cursive;">
+    <div class = "footer_text">
         <h5>Kim-Jeong-Hoon</h5>
     </div>
 </div>
