--- a/templates/head.html
+++ b/templates/head.html
@@ -1,7 +1,11 @@
+{% load static %}
+
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    {# css link   #}
+    <link rel ="stylesheet" type = "text/css" href="{% static 'base.css' %}">
     {# bootstrap link #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -10,4 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
+
+
 </head>
