--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,27 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <style>
-        .testing{
-            background-color: yellow;
-            margin : 1rem;
-            height : 48px;
-            width : 48px;
-            border-radius: .5rem;
-            display : inline-block;
-        }
-    </style>
+<div style = "text-align: center">
+    <div style = "margin: 2rem">
+        <h1>http method</h1>
 
-    <div style = "height: 20rem; background-color : aqua;
-     margin: 2rem; border-radius: 1rem; font-size: 2rem">
-        <h1>안녕하세용 :)</h1>
-
-    <div class = "testing" style = "height : 48px; width: 48px ">px</div>
-    <div class = "testing" style = "height : 3rem; width: 3rem ">rem</div>
-    <div class = "testing" style = "height : 3em; width: 3em ">em</div>
-    <div class = "testing" style = "height : 30%; width: 30% ">%</div>
-
+        <form action = "/accounts/hello_world/"method = 'post'>
+            {% csrf_token %}
+            <input type ="text"name = "input_text">
+            <input type ="submit" class="btn btn-success px-5">
+        </form>
     </div>
-
-
+    <h3>{{ model_instance.text }}</h3>
+</div>
 {% endblock %}
