--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -10,7 +10,10 @@
             <input type ="text"name = "input_text">
             <input type ="submit" class="btn btn-success px-5">
         </form>
+        {% for data in data_list %}
+            <h3>{{ data.text }}</h3>
+        {% endfor %}
     </div>
-    <h3>{{ model_instance.text }}</h3>
+
 </div>
 {% endblock %}
