--- a/templates/header.html
+++ b/templates/header.html
@@ -5,8 +5,23 @@
     <div class = "footer_button">
         <span>nav1</span>
         <span>nav2</span>
-        <span>nav3</span>
-        <span>nav4</span>
+        {% if not user.is_authenticated %}
+        <span>
+            <a href="{% url 'accountapp:login' %}">
+                Login
+            </a>
+        </span>
+        <span>
+            <a href="{% url 'accountapp:create' %}">
+                Sign-up
+            </a>
+        </span>
+        {% else %}
+        <span>
+            <a href="{% url 'accountapp:logout' %}">
+                Log-out
+            </a>
+        </span>
+        {% endif %}
     </div>
-
 </div>
