--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'head.html' %}
-<body>
+<body sytle = "font-family: 'NanumSquareR'">
 {% include 'header.html' %}
 
 <hr>
