--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,6 +8,8 @@
         <div>
             {{ target_user.data_joined }}
         </div>
+
+        {% if user == target_user %}
         <div>
             <a href="{% url 'accountapp:update' pk=target_user.pk %}">
                 Update Info
@@ -18,6 +20,7 @@
                 Quit
             </a>
         </div>
+    {% endif %}
     </div>
 
 
