--- a/accountapp/static/base.css
+++ b/accountapp/static/base.css
@@ -16,3 +16,14 @@
     max-width : 500px;
     padding : 1rem 1.5rem;
 }
+.profile_image {
+    height : 12rem;
+    width : 12rem;
+    border-radius : 20rem;
+    object-fit : cover;
+
+}
+
+.NMS_B{
+    font-family: "Nanum",cursive;
+}
