--- a/profileapp/templates/profileapp/create.html
+++ b/profileapp/templates/profileapp/create.html
@@ -4,10 +4,25 @@
 
     <div class ="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Create Profile</h4>
+            {% if target_user.profile %}
+                <img src="{{ target_user.profile.image.url }}"
+                     class="profile_image m-4"
+                     alt="profile image">
+                <h2 class="NNS_B">{{ target_user.profile.nickname }}</h2>
+
+            <h5>{{ target_user.profile.message }}</h5>
+            {% else %}
+            <h2>
+                <a href="{% url 'profileapp:create' %}">
+                    Create Profile
+                </a>
+            </h2>
+            {% endif %}
         </div>
         <div>
-            <form action = "{% url 'profileapp:create' %}" method = "post">
+            <form action = "{% url 'profileapp:create' %}"
+                  enctype="multipart/form-data"
+                  method = "post">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <input type ="submit"
